# lisagap

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PSD_CSD_Equal_noise_Equal_armlength.ipynb  README.md  experiment_gap_notebook.ipynb  gap_mask_summary.json  gap_notebook.ipynb  lisa_noise_estimation_multiple_realization_PP_plots.ipynb  pyproject.toml  setup.py  test_gpu.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: README.md  requirements.txt
docs/source/: api.rst  citation.rst  conf.py  contributing.rst  gap_notebook.ipynb  index.rst  installation.rst  tutorial.rst
lisa_gap/: __init__.py  gap_mask_generator.py
lisagap/: __init__.py  __version__.py  gap_mask_generator.py  gap_segment_generator.py  gap_window_generator.py
tests/: test_data_segment_generator.py  test_gap_mask_generator.py  test_gap_window_generator.py
